# python2jsonschema

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-test.yml
python2jsonschema/: __init__.py  cli.py  schematype.py
tests/: outschema.json  test_alot.py  test_forwardref.py  test_typeddict.py  testtypes.py
